2010-05-19  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: 1) When refreshing the collection
	  we always keep the same CurrentItem and just refresh the
	  CurrentPosition if the item has changed index.
	2) When refreshing, if we previously had an item selected but
	  now that item is not in the filtered collection we just
	  select the first item in the filtered list.
	3) When committing an edit we need to reseat the item in its
	  group and also resort our filtered list in case we changed
	  the property we group/sort by.

2010-05-19  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Add some more missing exceptions
	  and update accordingly.

2010-05-19  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionViewGroup.cs: It's actually pretty damn
	  tough to get IndexOfSubtree to work right so I've just
	  replaced it by creating an enumerator and iterating over the
	  tree structure. It's not the most efficient but it
	  definitely works in all cases.

	* StandardCollectionView.cs: When we add/remove an item from
	  the source collection we need to get the actual index of the
	  item in the sorted/grouped/filtered collection and use that
	  to adjust the current selection. Fix an issue in
	  RemoveFromFilteredAndGroup where we added the item to the
	  group again instead of removing it. Fixes yet more of 232.

2010-05-18  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs:
	* StandardCollectionViewGroup.cs: Add the ability to add items
	  to CollectionViewGroups while ignoring the SortDescriptions.
	  Fix several issues where we were getting the index from the
	  wrong collection which was breaking the MoveCurentTo logic
	  when elements were added/removed. Fixes the new moon-units
	  and more of drt 232.

2010-05-18  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs:
	* StandardCollectionViewGroup.cs: Fix up how we insert items